--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>홈</title>
     
 </head>
 <body>
@@ -18,17 +18,17 @@
         </div>
         <div class="homepage-header__pages">
             <a href="home.html"><i class="fa-solid fa-house"></i></a>
-            <a href="study.html"><i class="fa-solid fa-book-open"></i></a>
+            <a href="study-mine.html"><i class="fa-solid fa-book-open"></i></a>
             <a href="calender.html"><i class="fa-solid fa-calendar-days"></i></a>
             <a href="user.html"><i class="fa-solid fa-user"></i></a>
         </div>
     </header>
 
-    <div class="home-advertise">
-        <div class="home-advertise__book">
-            <h2 class="home-advertise__title">오늘의 책</h2>
-            <div class="home-advertise__book-picture">
-                <a class="home-advertise__book-image" href="book-advertise.html"><img src="*"></a>
+    <div class="row-advertise">
+        <div class="row-advertise__book">
+            <h2 class="row-advertise__title">오늘의 책</h2>
+            <div class="row-advertise__book-picture">
+                <a class="row-advertise__book-image" href="book-advertise.html"><img src="*"></a>
             </div>
         </div>
     </div>
