--- a/study-mine.html
+++ b/study-mine.html
@@ -19,7 +19,7 @@
         <div class="homepage-header__pages">
             <a href="home.html"><i class="fa-solid fa-house"></i></a>
             <a href="study-mine.html"><i class="fa-solid fa-book-open"></i></a>
-            <a href="calender.html"><i class="fa-solid fa-calendar-days"></i></a>
+            <a href="notes.html"><i class="fa-solid fa-book"></i></a>
             <a href="user.html"><i class="fa-solid fa-user"></i></a>
         </div>
     </header>
