--- a/notes.html
+++ b/notes.html
@@ -10,28 +10,25 @@
 </head>
 <body>
     <header class="homepage-header">
-        <div class="homepage-header__company">
-            <img src="*">
+        <div class="homepage-header__login">
+            <a href="user.html"><i class="fa-solid fa-user"></i> My</a>
+            <a href="*">로그인</a>
+            <a href="*">회원가입</a>
+            <a href="*">고객센터</a>
         </div>
-        <div class="homepage-header__logo">
-            <img src="*">
-        </div>
-        <div class="homepage-header__pages">
-            <a href="home.html"><i class="fa-solid fa-house"></i></a>
-            <a href="study-mine.html"><i class="fa-solid fa-book-open"></i></a>
-            <a href="notes.html"><i class="fa-solid fa-book"></i></a>
-            <a href="user.html"><i class="fa-solid fa-user"></i></a>
+
+        <div class="homepage-header__banner">
+            <a href="home.html"><img src="*"></a>
         </div>
     </header>
 
-    <div class="row-advertise">
-        <div class="row-advertise__book">
-            <h2 class="row-advertise__title">오늘의 책</h2>
-            <div class="row-advertise__book-picture">
-                <a class="row-advertise__book-image" href="book-advertise.html"><img src="*"></a>
-            </div>
+    <header class="homepage-header__list">
+        <div class="homepage-header__pages">
+            <a href="study-mine.html">스터디</a>
+            <a href="notes.html">오답노트</a>
+            <a href="*">매거진</a>
         </div>
-    </div>
+    </header>
 
     <main class="main-notes">
         <div class="main-notes__analysis">
