--- a/user.html
+++ b/user.html
@@ -84,34 +84,26 @@
     </main>
     
     <nav class="nav__bar">
-        <div class="nav__bar-image">
-            <img src="*" alt="">
+        <div class="nav__bar-contents">
+            <div class="nav__bar-company">
+                <h6>회사이름</h6>
+                <span>경상남도 창원시 어쩌구 어쩔동</span>
+                <span>사업자등록번호 205-51-81532 | 통신판매업 2022-경남-90123</span>
+                <span>대표 김병준 | 개인정보 보호책임자 김병준</span>
+                <span>문의전화 055-548-8085 | junes19@naver.com</span>
+            </div>
+    
+            <div class="nav__bar-sns">
+                <a href="*"><i class="fa-brands fa-instagram"></i></a>
+                <a href="*"><i class="fa-brands fa-youtube"></i></a>
+                <a href="*"><i class="fa-brands fa-facebook"></i></a>
+            </div>
         </div>
-
-        <div class="nav__bar-company">
-            <span>회사명</span>
-            <span>대표 : 김병준</span>
-            <span>개인정보책임관리자 : 김병준</span> 
-            <span>사업자번호 : 2020202020</span>
-        </div>
-
-        <div class="nav__bar-contacts">
-            <span>주소 : 경상남도 창원ㅅ ㅣ어쩌수</span>
-            <span>통신판매업 신고번호 : 23123</span>
-            <span>이메일 : junes19@qwkljeqw.com</span>
-            <span>전화번호 : 055)552-5584</span>
-        </div>
-
         <div class="nav__bar-law">
-            <a href="*">이용약관</a>
-            <a href="*">개인정보취급방식</a>
-            <a href="*">취소 및 환불정책</a>
-        </div>
-
-        <div class="nav__bar-sns">
-            <a href="*">인스타</a>
-            <a href="*">유튜브</a>
-            <a href="*">페이스북</a>
+                <a href="*">이용약관</a>
+                <a href="*">개인정보처리방침</a>
+                <a href="*">운영정책</a>
+                <a href="*">문의</a>
         </div>
     </nav>
 
