--- a/notes.html
+++ b/notes.html
@@ -30,7 +30,7 @@
         </div>
     </header>
 
-    <main class="main-notes">
+    <main>
         <div class="main-notes__analysis">
             <h1 class="analysis-name">분석</h1>
             <div class="main-notes__analysis-maded">
