--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
             <a href="home.html">홈</a>
             <a href="study-mine.html">스터디</a>
             <a href="notes.html">오답노트</a>
-            <a href="*">매거진</a>
+            <a href="magazine.html">매거진</a>
         </div>
     </header>
 
@@ -35,8 +35,7 @@
     <div class="row-advertise">
         <a class="row-advertise__image" href="book-advertise.html"><img src="*"></a>
     </div>
-
-    
+  
     <main>
         <div class="home-study">
             <h1 class="home-study-name">참여 중 스터디 - </h1>
@@ -59,19 +58,19 @@
                         </div>
                         <div class="main-study__icons">
                             <div class="main-study__icons-homeworks">
-                                <a href="*">
+                                <a href="study-mine.html">
                                     <i class="fa-solid fa-book"></i>
                                     <span>1</span>
                                 </a>
                             </div>
                             <div class="main-study__icons-chats">
-                                <a href="*">
+                                <a href="study-mine.html">
                                     <i class="fa-solid fa-comment"></i>
                                     <span>1</span>
                                 </a>
                             </div>
                             <div class="main-study__icons-teammates">
-                                <a href="*">
+                                <a href="study-mine.html">
                                     <i class="fa-solid fa-user"></i>
                                     <span>6</span>
                                 </a>
@@ -550,6 +549,6 @@
 
     <script src="https://kit.fontawesome.com/854ea81dbe.js" 
     crossorigin="anonymous">
-</script>
+    </script>
 </body>
 </html>
