--- a/study-mine.html
+++ b/study-mine.html
@@ -27,7 +27,7 @@
             <a href="home.html">홈</a>
             <a href="study-mine.html">스터디</a>
             <a href="notes.html">오답노트</a>
-            <a href="*">매거진</a>
+            <a href="magazine.html">매거진</a>
         </div>
     </header>
 
