--- a/user.html
+++ b/user.html
@@ -12,7 +12,7 @@
     <header class="homepage-header">
         <div class="homepage-header__login">
             <a href="user.html"><i class="fa-solid fa-user"></i> My</a>
-            <a href="*">로그인</a>
+            <a href="index.html">로그인</a>
             <a href="*">회원가입</a>
             <a href="*">고객센터</a>
         </div>
@@ -24,9 +24,10 @@
 
     <header class="homepage-header__list">
         <div class="homepage-header__pages">
+            <a href="home.html">홈</a>
             <a href="study-mine.html">스터디</a>
             <a href="notes.html">오답노트</a>
-            <a href="*">매거진</a>
+            <a href="magazine.html">매거진</a>
         </div>
     </header>
 
@@ -71,12 +72,14 @@
                     <li>보유 자격증</li>
                     <li>목표</li>
                     <li>완료 스터디</li>
+                    <li>주요공부</li>
                 </ul>
                 <ul>
                     <li>2022.06.01<a href="*">가입정보</a></li>
                     <li>전기기사, 컴활1급</li>
                     <li>이직</li>
                     <li>5건<a href="*">스터디 내역</a></li>
+                    <li>NCS, 전기</li>
                 </ul>
 
             </div>
