--- a/study-others.html
+++ b/study-others.html
@@ -25,9 +25,9 @@
     <header class="homepage-header__list">
         <div class="homepage-header__pages">
             <a href="home.html">홈</a>
-            <a href="study-others.html">스터디</a>
+            <a href="study-mine.html">스터디</a>
             <a href="notes.html">오답노트</a>
-            <a href="*">매거진</a>
+            <a href="magazine.html">매거진</a>
         </div>
     </header>
 
